ref: shorter docs
